Update .gitignore: exclude IDE configs and local development files

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ build/
 # IDE
 .vscode/
 .idea/
+.claude/
+.cursor/
 *.swp
 *.swo
 *~
@@ -39,3 +41,8 @@ data/
 .DS_Store
 Thumbs.db
 .serena/
+
+# Project-specific exclusions
+bmad/
+server.py
+MCP_SESSION_ISSUE.md
