Reorganize project structure and publish to PyPI v1.0.0
- Moved tests to tests/ directory for better organization
- Moved PROJECT_STATUS.md to docs/ directory
- Added proper Python packaging: pyproject.toml, LICENSE, MANIFEST.in
- Added main() entry point to submagic_mcp.py
- Updated .gitignore to exclude build artifacts
- Updated README test path reference
- Published to PyPI: https://pypi.org/project/submagic-mcp-server/1.0.0/

Clean, professional structure following MCP and Python best practices.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ ENV/
 *.egg-info/
 dist/
 build/
+.eggs/
 
 # Environment variables
 .env
@@ -40,9 +41,11 @@ data/
 # OS
 .DS_Store
 Thumbs.db
-.serena/
 
-# Project-specific exclusions
-bmad/
-server.py
-MCP_SESSION_ISSUE.md
+# PyPI/Build artifacts
+*.egg
+*.egg-info/
+dist/
+build/
+*.whl
+*.tar.gz
